--- a/schema/css/schemaorg.css
+++ b/schema/css/schemaorg.css
@@ -178,7 +178,7 @@ text-align: left;
 background: #C7CBCE;
 padding-left: 5px;
 }
-.definition-table th.supported
+.definition-table th.relevant
 {
 background: #BBDDBB;
 }
@@ -251,71 +251,12 @@ font-size: x-small;
 clear: both;
 padding-top: 1em;
 }
-#selectionbar ul
-{
-float: right;
-padding: 10px 0;
-}
 #mainContent, #footer, #pageHeader h1, .wrapper {
  max-width: 960px;
  min-width: 350px;
  margin: 0 auto !important;
  padding: 0 40px;
 }
-#pageHeader h1 {
- position:relative;
- top: 25px; left: -40px;
- text-shadow: 0 2px 0 #510000;
- pointer-events: none;
-}
-#selectionbar ul {
-  margin: 0 auto;
-  display: block;
-}
-#cse-search-form {
-  float: right;
-  margin-top:-20px;
-  width: 248px !important;
-}
-gsc-input input.gsc-input { background: #FFF !important;}
-
-@media all and (max-width: 720px) {
-  #pageHeader {
-    height: 120px;
-  }
-  #cse-search-form {
-    margin-left: 15px;
-    margin-top: 20px;
-  }
-}
-
-
-/* -- extras -- */
-
-input.gsc-input {
-  border-color: #660000;
-  color: #333333;
-  font-family: "Lucida Grande" , "Lucida Sans Unicode" , Verdana, Tahoma, Arial, sans-serif;
-  font-size: 11px;
-  padding: 3px;
-  width: 99%;
-}
-input.gsc-search-button {
-  background-color: #660000;
-  border-color: #660000;
-  color: #fff;
-  font-family: inherit;
-  font-size: 11px;
-  font-weight: normal;
-  padding: 2px 8px;
-  text-shadow: none;
-}
-.gsc-input input.gsc-input {
-  background: none repeat scroll 0% 0% white !important;
-  border-color: #660000;
-  padding: 3px;
-  width: 99%;
-}
-.gsc-clear-button {
-  display: none;
+.relevant {
+background-color: #BBDDBB;
 }
